--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -31,6 +31,11 @@ h3 {
 	font-size: 1.5em;
 }
 
+@media screen and (min-width: 390px) {
+
+
+
+
 h3, section h2 {
 	font-family: 'Courier';
 	text-align: center;
@@ -343,4 +348,6 @@ section img {
 	background-color: #cccccc;
 	min-height: 100%;
 	color: #fff;	
+}
+	
 }
