--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -31,6 +31,16 @@ h3 {
 	font-size: 1.5em;
 }
 
+section h3 {
+height: 68px;	
+}
+
+section img {
+	position: relative;
+	z-index: 1;
+	display: inline-block;
+}
+
 @media screen and (min-width: 390px) {
 
 
