--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -31,32 +31,16 @@ h3 {
 	font-size: 1.5em;
 }
 
-section h3 {
-height: 68px;	
-}
-
-section img {
-	position: relative;
-	z-index: 1;
-	display: inline-block;
-}
-
-p {
-	font-size: 1.2em;
-}
-
-@media screen and (min-width: 390px) {
-
-
-
-
 h3, section h2 {
 	font-family: 'Courier';
 	text-align: center;
 }
 
-.content-primary p {
-	width: 78%;
+section p {
+	margin: 0 auto;
+	line-height: 150%;
+	width: 30%;
+	font-size: 1.2em;
 }
 
 section img {
@@ -359,6 +343,4 @@ section img {
 	background-color: #cccccc;
 	min-height: 100%;
 	color: #fff;	
-}
-	
 }
