--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -46,7 +46,6 @@ section img {
 p {
 	font-size: 1.2em;
 	text-align: center;
-	margin: 2% 23%;
 }
 
 h3, section h2 {
@@ -155,6 +154,10 @@ h3, section h2 {
 
 .content-primary, .content-secondary, .content-tertiary {
 	margin: 6% 0 6% 0;
+}
+
+.content-primary p, .content-secondary p, .content-tertiary p {
+	margin: 2% 23%;
 }
 
 .content-primary .headline-banner {
